retrieveUnpackaged/objects/Casting__c.object
<CustomObject>
    <fields>
        <fullName>CastingBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Castings</relationshipLabel>
        <relationshipName>Castings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CastingCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Castings</relationshipLabel>
        <relationshipName>Castings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductionName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production</label>
        <referenceTo>Production__c</referenceTo>
        <relationshipLabel>Castings</relationshipLabel>
        <relationshipName>Castings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Casting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00}</displayFormat>
        <label>Casting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Castings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>